--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -20,7 +20,7 @@
         <h2 class="heading-large">Qualifications needed</h2>
         <p>State the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
 
-        {{ macros.textarea(course.programmeCode + '-qualifications-required', 'Qualifications needed', 8, null, 100) }}
+        {{ macros.textarea(course.programmeCode + '-qualifications-required', 'Qualifications needed', 8, null, 100, errors) }}
 
         <h2 class="heading-large">Personal qualities</h2>
         <p>Tell applicants about the skills and motivation you’re looking for (eg experience with children, a genuine passion for teaching, or a talent for public speaking).</p>
