--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -134,8 +134,14 @@
     text:
     more:
 #}
-{% macro radioGroup(name, fields) %}
-  <div class="form-group">
+{% macro radioGroup(name, fields, errors = false) %}
+  {% set e = error(name, errors) %}
+  <div class="form-group {% if e %} form-group-error{% endif %}">
+  {% if e %}
+    <span class="error-message">
+      {{ e.title }}
+    </span>
+  {% endif %}
   {% for field in fields %}
     <div class="multiple-choice" data-target="radio-{{ name }}-part-{{ loop.index }}-extra">
       <input
@@ -190,9 +196,15 @@
 </div>
 {% endmacro %}
 
-{% macro textbox(id, label, helpText = false, size = '', prefix = false) %}
-<div class="form-group">
+{% macro textbox(id, label, helpText = false, size = '', prefix = false, errors = false) %}
+{% set e = error(id, errors) %}
+<div class="form-group {% if e %} form-group-error{% endif %}">
   <label class="form-label" for="{{id}}">{{label | safe}}</label>
+  {% if e %}
+    <span class="error-message">
+      {{ e.title }}
+    </span>
+  {% endif %}
   {% if helpText %}
     <span class="form-hint">{{helpText | safe}}</span>
   {% endif %}
@@ -223,9 +235,16 @@
 </div>
 {% endmacro %}
 
-{% macro textarea(id, label, rows, helpText = false, maxWords = 50) %}
-<div class="form-group">
+{% macro textarea(id, label, rows, helpText = false, maxWords = 50, errors = false) %}
+{% set e = error(id, errors) %}
+
+<div class="form-group{% if e %} form-group-error{% endif %}">
   <label class="form-label form-label-bold" for="{{id}}">{{label}}</label>
+  {% if e %}
+    <span class="error-message">
+      {{ e.title }}
+    </span>
+  {% endif %}
   {% if helpText %}
     <span class="form-hint">{{helpText}}</span>
   {% endif %}
@@ -260,10 +279,11 @@
 </div>
 {% endmacro %}
 
-{% macro coursePart(id, label) %}
-<div>
+{% macro coursePart(id, label, error = false) %}
+<div {% if error %}class="course-part-error"{% endif %}>
   <dt class="course-part-label">
     {{ label }}
+    {% if error %}<a href="#{{ id }}" class="course-part-label-error">{{ error }}</a>{% endif %}
   </dt>
   {% if (value(id)) %}
     <dd class="course-part-value">
@@ -277,10 +297,11 @@
 </div>
 {% endmacro %}
 
-{% macro feesCoursePart(id, label) %}
-<div>
+{% macro feesCoursePart(id, label, error = false) %}
+<div {% if error %}class="course-part-error"{% endif %}>
   <dt class="course-part-label">
     {{ label }}
+    {% if error %}<a href="#{{ id }}" class="course-part-label-error">{{ error }}</a>{% endif %}
   </dt>
   {% if (value(id)) %}
     <dd class="course-part-value">
