Add detail about required salary field

--- a/app/views/history/validating-on-publish/index.html
+++ b/app/views/history/validating-on-publish/index.html
@@ -33,7 +33,7 @@
 
   {{ macros.screenshot('Validating a course on publish', 'validating-a-course-on-publish', '/public/images/history/validating-on-publish/thumbnails/01-validating-a-course-on-publish.png', '/public/images/history/validating-on-publish/01-validating-a-course-on-publish.png', '
     <p>A user has attempted to publish an empty course.</p>
-    <p>This page shows all the errors a user could see at this stage.</p>
+    <p>This page shows all the errors a user could see at this stage for this type of course. If the course was salaried then the salary field is required in place of the fee field.</p>
     <p>Optional fields do not error if they are not present.</p>
     <p>Clicking an error takes you to the field that’s missing. Clicking "Give details about this course" takes you to the "About this course" section on the "About this course" page.</p>
   ') }}
