Give some context about missing QA step

--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -38,6 +38,9 @@
       <p>Validate against word count when saving.</p>
       <p>Validate all required fields have been completed before publishing.</p>
 
+      <h3 class="heading-medium">No QA in this flow</h3>
+      <p>We originally expected to build a <a href="/history/qa-draft">quality assurance (QA) review step</a> into the publishing workflow. But given the complexity of building this flow and the volume of courses needing approval, we switched to a ‘spot-check’ approach, where we will review a sample of all published content.</p>
+
       <h3 class="heading-medium">State</h3>
       <p>A course or the ‘About your organisation’ section can be in one of these states:</p>
 
