--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -23,6 +23,13 @@
         A more indepth look at UCAS course status and how it’ll affect publishing.
       </p>
 
+      <h3 class="heading-small">
+        <a href="/history/story-map-aug-1">Story map – 1 August 2018</a>
+      </h3>
+      <p>
+        Screenshots of the end to end journey from publish courses to search and compare.
+      </p>
+
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
