Add success messaging design docs

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/success-messaging">Success messaging</a>
+      </h3>
+      <p>
+        Messages we show after a successful save or publish.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/course-not-running">Course statuses – Iteration 3 August 2018</a>
       </h3>
       <p>
