Add stats about number of accreditors

--- a/app/views/history/about-your-organisation/index.html
+++ b/app/views/history/about-your-organisation/index.html
@@ -22,6 +22,46 @@
 
       <p>An organisation can have no accrediting provider, one provider, or many. Add a field to describe each accrediting provider (if there are any), and remove guidance around accrediting provider from the ‘Training with you’ field. Only one will show to applicants at any given time.</p>
 
+      <div class="body-text">
+        <table>
+          <thead>
+            <tr>
+              <th>Number of accreditors</th>
+              <th>Providers with that many accreditors</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>0 or 1 accreditor</td>
+              <td>865 providers</td>
+            </tr>
+            <tr>
+              <td>2 accreditors</td>
+              <td>147 providers</td>
+            </tr>
+            <tr>
+              <td>3 accreditors</td>
+              <td>41 providers</td>
+            </tr>
+            <tr>
+              <td>4 accreditors</td>
+              <td>13 providers</td>
+            </tr>
+            <tr>
+              <td>5 accreditors</td>
+              <td>1 provider</td>
+            </tr>
+            <tr>
+              <td>6 accreditors</td>
+              <td>1 provider</td>
+            </tr>
+            <tr>
+              <td>7 accreditors</td>
+              <td>1 provider</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <p>
         <a href="https://dfedigital.atlassian.net/browse/BATSA-402">BATSA-402</a>
       </p>
