--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -44,7 +44,7 @@
       <a href="https://dfedigital.atlassian.net/browse/BATSA-451">BATSA-451</a>
 
       <h2 class="heading-medium">Organisations without courses</h2>
-      <p>Some courses will have no courses because:</p>
+      <p>Some organisations will have no courses because:</p>
       <ul class="list list-bullet">
         <li>they are new</li>
         <li>they are set up in UCAS so they can be listed as an accrediting provider</li>
