--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/no-more-folding">No more course folding</a>
+      </h3>
+      <p>
+        Reasoning behind not folding courses and unfolded course designs.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/success-messaging">Success messaging</a>
       </h3>
       <p>
