--- a/app/views/history/no-more-folding.html
+++ b/app/views/history/no-more-folding.html
@@ -69,7 +69,7 @@
 
       <p>The benefit of folding on search results that we saw with applicants can be achieved using grouping.</p>
 
-      <p>Rather than 1 result linking to a page with all variants, instead group a provider’s courses in the search results. A group will have multiple links to each variants – allowing for a cursory comparison, while the group itself can be easily skipped past.</p>
+      <p>Rather than 1 result linking to a page with all variants, instead group a provider’s courses in the search results. A group will have multiple links to each variant – allowing for a cursory comparison, while the group itself can be easily skipped past.</p>
 
       <p>We’re <a href="https://trello.com/c/jQftifYl/44-group-listings-to-make-results-easier-to-scan">tracking grouping on the story map</a> and consider it outside of the minimum viable service.</p>
     </div>
