--- a/app/views/history/no-more-folding.html
+++ b/app/views/history/no-more-folding.html
@@ -30,7 +30,7 @@
         <li><a href="https://lookback.io/watch/i4dYWSnhubPdWSY36">Catholic Teaching Alliance</a></li>
       </ul>
 
-      <p>We tested a course detail page with applicants: <a href="https://search-and-compare-beta.herokuapp.com/history/course-options-user-research-june-8">applicant research</a></p>
+      <p>We tested a course detail page with applicants: <a href="https://search-and-compare-prototype.herokuapp.com/history/course-options-user-research-june-8">applicant research</a></p>
 
       <h3 class="heading-medium">Folding tested poorly with providers</h3>
 
@@ -51,7 +51,7 @@
 
       <p>The picture was better when we tested with applicants.</p>
 
-      <p>On the search results page users largely understood that multiple courses were being represented. Here the benefit of course folding was seen more clearly; users could more easily scan past a single training provider without needing to read each variant of their course – in this sense the results were fairer.</p>
+      <p>On the <a href="https://search-and-compare-prototype.herokuapp.com/history/course-options-user-research-june-8#search-results-with-variants">search results page</a> users largely understood that multiple courses were being represented. Here the benefit of course folding was seen more clearly; users could more easily scan past a single training provider without needing to read each variant of their course – in this sense the results were fairer.</p>
 
       <p>We saw that applicants didn’t understand that some fields only applied to some variants – we expected the <a href="/history/iteration-june-26#preview">iterated course detail page</a> to largely fix this, but we didn’t test this version with applicants.
 
